<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".ui.view.home.HomeFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/top_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-22dp"
        app:cardBackgroundColor="@color/gray_normal"
        app:cardCornerRadius="22dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:elevation="4dp"
            android:paddingTop="26dp">

            <TextView
                android:id="@+id/app_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/quicksand_semi_bold"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.06"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintBottom_toBottomOf="@id/app_name_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.94"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/app_name_tv">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_spinner" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/top_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/are_you_feeling_sick"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/app_name_tv"
                app:layout_constraintTop_toBottomOf="@id/app_name_tv" />

            <TextView
                android:id="@+id/top_subtitle_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="4dp"
                android:text="@string/home_subtitle"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@id/app_name_tv"
                app:layout_constraintTop_toBottomOf="@id/top_title_tv"
                app:layout_constraintWidth_percent="0.84" />


            <androidx.cardview.widget.CardView
                android:id="@+id/call_card"
                android:layout_width="150dp"
                android:layout_height="46dp"
                android:layout_marginBottom="26dp"
                app:cardBackgroundColor="@color/red_normal"
                app:cardCornerRadius="23dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/send_message_card"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="4dp"
                    android:fontFamily="@font/quicksand_semi_bold"
                    android:gravity="center"
                    android:paddingHorizontal="20dp"
                    android:text="@string/call_now"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    app:drawableStartCompat="@drawable/ic_phone" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/send_message_card"
                android:layout_width="150dp"
                android:layout_height="46dp"
                app:cardBackgroundColor="@color/blue_normal"
                app:cardCornerRadius="23dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="@id/call_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/call_card"
                app:layout_constraintTop_toTopOf="@id/call_card">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="4dp"
                    android:fontFamily="@font/quicksand_semi_bold"
                    android:gravity="center"
                    android:paddingHorizontal="20dp"
                    android:text="@string/send_sms"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    app:drawableStartCompat="@drawable/ic_phone" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-26dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="26dp">

            <TextView
                android:id="@+id/prevention_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/quicksand_semi_bold"
                android:text="@string/prevention"
                android:textColor="@color/text_color_gray_dark"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.06"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/prevention_more_iv"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="6dp"
                android:src="@drawable/ic_short_right"
                app:layout_constraintBottom_toBottomOf="@id/prevention_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.94"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/prevention_tv"
                tools:ignore="ContentDescription" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/prevention_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="10dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/prevention_tv"
                tools:listitem="@layout/item_prevention_short" />

            <TextView
                android:id="@+id/article_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/quicksand_semi_bold"
                android:text="@string/article"
                android:textColor="@color/text_color_gray_dark"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.06"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/prevention_rv" />

            <ImageView
                android:id="@+id/article_more_iv"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="6dp"
                android:src="@drawable/ic_short_right"
                app:layout_constraintBottom_toBottomOf="@id/article_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.94"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/article_tv"
                tools:ignore="ContentDescription" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/article_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="10dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/article_tv"
                tools:listitem="@layout/item_short_article" />

            <TextView
                android:id="@+id/news_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/quicksand_semi_bold"
                android:text="@string/news"
                android:textColor="@color/text_color_gray_dark"
                android:textSize="20sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.06"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/article_rv" />

            <ImageView
                android:id="@+id/news_more_iv"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="6dp"
                android:src="@drawable/ic_short_right"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/news_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.94"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/news_tv"
                tools:ignore="ContentDescription" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/news_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="10dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/news_tv"
                tools:itemCount="0" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</LinearLayout>
